# Machine-Learning-Project-KU-Leuven

./: README.md  package-lock.json  pyproject.toml  pyrightconfig.json  report.tex
part1/: game.py  main.py  policy.py  visualization.py
part2/: analyze_eval_scores.py  diagonal_agent.py  evaluation.py  find_second_best_models.py  fine_tuning_pipeline_multi.py  fine_tuning_pipeline_single.py  multi_agent_train_impala.py  random_agent.py  single_agent_train_impala.py  submission_multi.py  submission_single.py  submission_single_no_arrows.py  utils.py
top_impala_models/best_multi_impala_best/: algorithm_state.pkl
top_impala_models/best_multi_impala_best/learner_group/: class_and_ctor_args.pkl
top_impala_models/best_multi_impala_best/learner_group/learner/: state.pkl
top_impala_models/best_multi_impala_best_mod_rewards/: algorithm_state.pkl  class_and_ctor_args.pkl
top_impala_models/best_multi_impala_best_mod_rewards/env_runner/: class_and_ctor_args.pkl
top_impala_models/best_single_impala_best/: algorithm_state.pkl
top_impala_models/best_single_impala_extended_no_use/: algorithm_state.pkl  class_and_ctor_args.pkl
top_impala_models/best_single_impala_extended_no_use/env_runner/: class_and_ctor_args.pkl
top_impala_models/best_single_impala_extended_no_use/learner_group/: class_and_ctor_args.pkl
top_ppo_models/multi_ppo_mod_rewards_311.43/: algorithm_state.pkl  class_and_ctor_args.pkl
top_ppo_models/multi_ppo_mod_rewards_311.43/env_runner/: class_and_ctor_args.pkl
top_ppo_models/single_ppo_no_arrows_185.145/: algorithm_state.pkl  class_and_ctor_args.pkl
(+36 files in other folders)
