[project]
name = "ml-project-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dm-tree>=0.1.8",
    "gputil>=1.4.0",
    "ipykernel>=6.29.5",
    "keyboard>=0.13.5",
    "lz4>=4.4.4",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pettingzoo[butterfly]>=1.24.3",
    "pygame==2.6.1",
    "pyqt5>=5.15.11",
    "ray[rllib]==2.42.1",
    "stable-baselines3>=2.6.0",
    "supersuit>=3.9.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
